@@ -3,8 +3,10 @@ AUX config.gentoo-so 504 RMD160 60475939b963301f3a26416d87e53f8b08668d3e SHA1 9b
 DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
 DIST live.2009.07.28.tar.gz 459808 RMD160 17be40b4c1b7aa9f485c9b358b7f20ba6c4100d8 SHA1 61e61a08f37c843298759eef57a85d0b3b6e864b SHA256 4e90da352651e610bdf0de374ec49c6539a378afcbeb7438e76b1f7277ac4c6a
 DIST live.2009.09.04.tar.gz 449276 RMD160 0402c1f280648f916ce339b0a5b24f7a7c1da760 SHA1 587eb363afc735a21a42423a7a435e6b998af67d SHA256 bea51061867d1bc6e728f22481438407f566aa0e17cd8f0f15908dcd07b31818
+DIST live.2009.09.28.tar.gz 449508 RMD160 c25cb1a2377f0fe6c3817bbc3edbcd4daa57d0dc SHA1 e5657206976f592e3fd1fda9cfe77b5712498784 SHA256 0e84700e8982ac5472723c0327131c179512d4b99fe0c4ae903cfe08a1a0e03c
 EBUILD live-2009.06.02.ebuild 3620 RMD160 ebb0a6eebaae49a42e16169f4362f74f921a3842 SHA1 5838e8d56aaf2db669202dc6154bb48f0d4619ca SHA256 18843b1490b7cb4a23ac84dae4cdbc1505d376880981a8c332a4b512e88172a7
 EBUILD live-2009.07.28.ebuild 3621 RMD160 8469b9679d97c697d668822361afe242c53ae155 SHA1 9aca16def875292c2ce7305a176074881e1a585b SHA256 0abe0caaea897238ca5bc81f315fcda885f0ca4251ce747294187d399bd4ddfc
 EBUILD live-2009.09.04.ebuild 3622 RMD160 14fdf64c335b49560ae2fae25ddf54229fca17c7 SHA1 d43a9dbe0ea781f3296f406ed99cf47eb33b98ee SHA256 b46c05472e891fc369bbf8da8170d859f790c35807d8cacb9067486bebe4a981
-MISC ChangeLog 15153 RMD160 a22e06a42e4b50f6dc91bbac6aece2d59ff9e052 SHA1 a8b42ec6b3edc7e0aae5d6309342299544365d17 SHA256 6c3b683fd64438cc0dd7ec0cd0905a99487ec3f96d36c45b6bdf4b0d8dad4ce3
+EBUILD live-2009.09.28.ebuild 3598 RMD160 10e03e179953092f192cdb40bd6e1f5dfd57c6bc SHA1 25b476ef9966ffdc1a455074d78a3a7f64418003 SHA256 71c6fc80d9946ad7e1ad506ce197b4322ffe19a34ba573656022afcddd9f0365
+MISC ChangeLog 15364 RMD160 7a3a8803e8c6218eff4d4334ab0f71d1b84b1eac SHA1 f3ef695cb84cb80793398d8c730902fd15a95640 SHA256 44ae75afe50d825486d2ff47ed471740244ec326904acdb32b9ef9624d5cd57d
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
